feat: Implement complete trading engine with Spring Boot integration
- Add comprehensive matching engine with price-time priority algorithm
- Create REST API endpoints for order placement and matching
- Implement real-time trade execution with database persistence
- Add repository layer for all trading entities (Order, Trade, Transaction)
- Build advanced analytics with ASCII visualizations (market depth, price movements)
- Create randomized testing framework with realistic trading scenarios
- Successfully integrate PostgreSQL with proper schema management
- Add transaction tracking for buy/sell operations with proper accounting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/nilzexchange
 spring.datasource.username=oscarwiklundjonsson
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+
+# Additional configuration for proper column types
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
